# ESP32-S3

./: LICENSE  README.md
PPT/: 0课程介绍.pptx  1开发环境搭建.pptx  2-GPIO输出（点亮一个LED）.pptx  开源公学分享.pptx
examples/01-LED/main/: CMakeLists.txt  main.c
examples/02-LED_blink/main/: main.c
examples/03-Buzzer/main/: main.c
examples/04-Button/: CMakeLists.txt
examples/04-Button/main/: main.c
examples/05-interrupt1/: CMakeLists.txt
examples/05-interrupt1/main/: CMakeLists.txt  main.c
examples/07-timer/: CMakeLists.txt
examples/08-PWM/: CMakeLists.txt
examples/09-UART/: CMakeLists.txt
examples/10-using-tem/: CMakeLists.txt
examples/12-log/: CMakeLists.txt
examples/13-WIFI/: CMakeLists.txt
examples/13-log/: CMakeLists.txt
examples/ESP-DL-Test1/: CMakeLists.txt  sdkconfig.defaults  传感器数据导出.csv
examples/ESP-DL-Test1/main/: CMakeLists.txt  main.cpp  model_define.h  sensor_cnn_packed.espdl
examples/ESP-DL-test/: CMakeLists.txt  model_quantized.tflite
examples/MPU6050/: CMakeLists.txt
examples/OLED1(developing)/: CMakeLists.txt
introduce/: README.md
project/ESP32-C6/: CMakeLists.txt
project/HC-SRO4/: CMakeLists.txt  task.doc  task_extracted.txt
project/MPU6050-final/: CMakeLists.txt
project/MPU6050-test/: CMakeLists.txt  mpu6050_data_20260401_175032.csv  mpu6050_data_20260401_181238.csv  mpu6050_data_20260401_182116.csv  mpu6050_data_20260401_182458.csv  mpu6050_data_20260401_185458.csv  mpu6050_data_20260402_160010.csv  mpu6050_data_20260402_160323.csv  receive_data.py  visualize_data.py
project/tem/: CMakeLists.txt  README.md
(+62 files in other folders)
